# emoji-annotation-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
src/colorful_emoji_annotations/: __init__.py  main.py
src/colorful_emoji_annotations/scripts/: update_emoji_list.py
src/colorful_emoji_annotations/static_resources/: default_emoji_mapping.json  emojis.txt
src/colorful_emoji_annotations/utils/: emoji.py  paths.py
src/emoji_annotations/: __init__.py  main.py
src/emoji_annotations/utils/: emoji.py  types.py
tests/: test_emojis.txt  tests.py
