[project]
name = "colorful-emoji-annotations"
description = "Easy to read and edit text annotations for NLP tasks."
version = "0.0.0"
authors = [
    {name = "Jan Göpfert"},
]
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",     
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = [
    "annotations",
    "named entity recognition",        
    "NER",
    "sequence labeling",
    "command line",    
    "information extraction",
    "emoji",
    "NLP",
    "natural language processing"
]

dependencies = [
    "setuptools",
    "pip",
    "wasabi==1.1.3"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
