[project]
name = "emoji-annotations"
description = "Easy to read and edit text annotations for NLP tasks."
version = "0.0.0"
authors = [
    {name = "Jan Göpfert"},
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",     
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = [
    "annotation tool",
    "annotations",    
    "NLP",
    "natural language processing",
    "NER",
    "named entity recognition",
    "sequence labeling",
    "information extraction",
    "emoji",
]

dependencies = [
    "setuptools",
    "pip",
    "wasabi==1.1.3"
]

[project.urls]
Homepage = "https://github.com/FZJ-IEK3-VSA/emoji-annotation-tool"
Issues = "https://github.com/FZJ-IEK3-VSA/emoji-annotation-tool/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"emoji_annotations.static_resources" = ["*.txt", "*.json"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
